section composition css

--- a/index.html
+++ b/index.html
@@ -293,61 +293,160 @@
         </div>
     </section>
 
-    <!-- <section class="set">
-        <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
-        <ul class="set__item">
-            <li class="set__number">01</li>
-            <li class="set__img"></li>
-            <li class="set__about">Сбор трав</li>
-        </ul>
-        <ul class="set__item">
-            <li class="set__number">02</li>
-            <li class="set__img"></li>
-            <li class="set__about">Инструкция по применению</li>
-        </ul>
-        <ul class="set__item">
-            <li class="set__number">03</li>
-            <li class="set__img"></li>
-            <li class="set__about">Сертификат качества</li>
-        </ul>
-    </section>
 
     <section class="composition">
-        <h2 class="composition__less">Состав «Шведской горечи»</h2>
-        <ul class="composition__description-up">
-            <li class="composition__description-more">Все травы, входящие в сбор, собраны в альпийском заповеднике
-                «Гуркталь» и имеют немецкий сертификат качества.
-            </li>
-            <li class="composition__description-more">Строго выверенные пропорции каждого компонента в составе</li>
-        </ul>
 
-        <ul class="composition__description-down">
-            <li class="composition__description-more">Все травы в составе бальзама обладают сильным очищающим
-                воздействием, при этом каждый из компонентов усиливает действие остальных.
-            </li>
-            <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий эффект. Как
-                оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
-            </li>
-        </ul>
+        <div class="composition__wrapper-up">
 
-        <div class="composition__card">
-            <img src="build/img/component-01.jpg" alt="Изображение компонента">
-            <img src="build/img/component-02.jpg" alt="Изображение компонента">
-            <img src="build/img/component-03.jpg" alt="Изображение компонента">
-            <img src="build/img/component-04.jpg" alt="Изображение компонента">
-            <img src="build/img/component-05.jpg" alt="Изображение компонента">
-            <img src="build/img/component-06.jpg" alt="Изображение компонента">
-            <img src="build/img/component-07.jpg" alt="Изображение компонента">
-            <img src="build/img/component-08.jpg" alt="Изображение компонента">
-            <img src="build/img/component-09.jpg" alt="Изображение компонента">
-            <img src="build/img/component-10.jpg" alt="Изображение компонента">
-            <img src="build/img/component-11.jpg" alt="Изображение компонента">
+            <div class="composition__description-wrapper-up">
+                <h2 class="composition__less">Состав <br> «Шведской горечи»</h2>
+                <ul class="composition__description-up">
+                    <li class="composition__description-up-item"><span>Все травы, входящие в сбор, собраны в альпийском заповеднике
+                    «Гуркталь» и имеют немецкий сертификат качества.</span>
+                    </li>
+                    <li class="composition__description-up-item">
+                        <span>Строго выверенные пропорции каждого компонента в составе</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="composition__description-wrapper-card">
+                <div class="composition__card-wrapper composition__card-wrapper-up">
+                    <ul class="composition__card composition__card-up">
+                        <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 01</li>
+                        <li class="composition-img"><img src="build/img/test.png" alt="Изображение компонента"></li>
+                        <li class="composition-name">
+                            Angelica archangelica
+                        </li>
+                        <li class="composition-hover"><span
+                                class="composition-text">Корень дягиля (дудника) лекарственного</span></li>
+                    </ul>
+
+                    <ul class="composition__card composition__card-up">
+                        <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 02</li>
+                        <li class="composition-img"><img src="build/img/comp-2.jpg" alt="Изображение компонента"></li>
+                        <li class="composition-name">Carlina acaulis</li>
+                        <li class="composition-hover"><span
+                                class="composition-text">Колючник бесстебельный</span></li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-        <a class="composition__btn order__btn" href="#">Заказать сбор трав</a>
+
+        <div class="composition__wrapper-middle">
+
+            <div class="composition__card-wrapper">
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 03</li>
+                    <li class="composition-img"><img src="build/img/comp-3.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Cunnamomum camphora</li>
+                    <li class="composition-hover"><span class="composition-text">Натуральная камфора</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 04</li>
+                    <li class="composition-img"><img src="build/img/comp-4.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Fraxinus ornus</li>
+                    <li class="composition-hover"><span
+                            class="composition-text">Высушенный сок из ствола ясеня манного</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 05</li>
+                    <li class="composition-img"><img src="build/img/comp-5.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Cammiphora molmol</li>
+                    <li class="composition-hover"><span class="composition-text">Мирра горькая</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 06</li>
+                    <li class="composition-img"><img src="build/img/comp-6.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Pheum palmatum</li>
+                    <li class="composition-hover">Корень ревня<span class="composition-text"></span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 07</li>
+                    <li class="composition-img"><img src="build/img/comp-7.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Crocus sativus</li>
+                    <li class="composition-hover"><span class="composition-text">Шафран посевной</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 08</li>
+                    <li class="composition-img"><img src="build/img/comp-8.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Cassia angustifolia</li>
+                    <li class="composition-hover"><span class="composition-text">Лист сенны александрийской</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 09</li>
+                    <li class="composition-img"><img src="build/img/comp-9.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Artemisia absinthium</li>
+                    <li class="composition-hover"><span class="composition-text">Полынь горькая</span></li>
+                </ul>
+
+                <ul class="composition__card">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 10</li>
+                    <li class="composition-img"><img src="build/img/comp-10.jpg" alt="Изображение компонента"></li>
+                    <li class="composition-name">Curcuma zedoaria</li>
+                    <li class="composition-hover"><span class="composition-text">Куркума (Цитварный корень)</span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="composition__wrapper-down">
+
+
+            <div class="composition__card-wrapper composition__card-wrapper-down">
+
+
+                <ul class="composition__card composition__card-down">
+                    <li class="composition-num"><img class="composition-def" src="build/img/def.png" alt=""> 11</li>
+                    <li class="composition-img"><img src="build/img/question.png" alt="Изображение компонента"></li>
+                    <li class="composition-secret">Часть рецепта до сих пор находится в секрете</li>
+                    <li class="composition-name">Theriak venezian</li>
+                    <li class="composition-hover"><span
+                            class="composition-text">Смесь трав по рецепту Марии Трэбэн</span></li>
+                </ul>
+
+                <div class="composition__card composition__content-tablet">
+                    <ul class="composition__description-down">
+                        <li class="composition__description-down-item"><span>Все травы в составе бальзама обладают сильным
+                            очищающим
+                            воздействием, при этом каждый из компонентов усиливает действие остальных.</span>
+                        </li>
+                        <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий
+                            эффект.
+                            Как
+                            оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
+                        </li>
+                    </ul>
+
+                    <a class="composition__btn button-for-all" href="#">Заказать сбор трав<img src="build/img/arrow.svg"
+                                                                                               alt=""></a>
+                </div>
+            </div>
+
+
+            <div class="composition__content-mobile">
+                <ul class="composition__description-down">
+                    <li class="composition__description-down-item">Все травы в составе бальзама обладают сильным
+                        очищающим
+                        воздействием, при этом каждый из компонентов усиливает действие остальных.
+                    </li>
+                </ul>
+
+                <a class="composition__btn button-for-all" href="#">Заказать сбор трав</a>
+            </div>
+        </div>
+
+
     </section>
 
-    <section class="guarantee">
+
+    <!--<section class="guarantee">
         <h2 class="guarantee__less">Гарантия качества</h2>
         <p class="guarantee__description-up">Если бальзам вам не понравится, мы вернем деньги. Сразу и без лишних
             вопросов. Мы дорожим своей репутацией и уверены в продукте на 100%</p>
